Fix some display pb on the top bar in admin view
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@294 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -117,7 +117,10 @@ Definition des class de style Silverpeas
 .textePetitBold                   { font-size: 11px; font-weight: bold; color: #000000}
 .textePetitBoldVert                   { font-size: 11px; font-weight: bold; color: #661666}
 .textePetitBold2                  { font-size: 11px; font-weight: bold; color: #666666}
-.txtpetitblanc                    { font-size: 11px; font-weight: bold; color: #FFFFFF}
+.txtpetitblanc {
+  font-size: 11px;
+  font-weight: bold;
+  color: #FFFFFF}
 .txtGrandBlanc                    { font-size: 13pt; font-weight: bold; color: #FFFFFF}
 .txtlibform { 
   font-size: 8pt;
