--- a/war-core/src/main/webapp/util/yui/container/assets/container.css
+++ b/war-core/src/main/webapp/util/yui/container/assets/container.css
@@ -1,26 +1,9 @@
-/**
- * Copyright (C) 2000 - 2009 Silverpeas
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * As a special exception to the terms and conditions of version 3.0 of
- * the GPL, you may redistribute this Program in connection with Free/Libre
- * Open Source Software ("FLOSS") applications as described in Silverpeas's
- * FLOSS exception.  You should have recieved a copy of the text describing
- * the FLOSS exception, and it is also available here:
- * "http://repository.silverpeas.com/legal/licensing"
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
- */
+/*
+Copyright (c) 2009, Yahoo! Inc. All rights reserved.
+Code licensed under the BSD License:
+http://developer.yahoo.net/yui/license.txt
+version: 2.8.0r4
+*/
 .yui-overlay,
 .yui-panel-container {
     visibility:hidden;
@@ -116,10 +99,9 @@ PLEASE NOTE:
        leverage the provided "hide-scrollbars" and "show-scrollbars" classes to 
        write custom style rules to guard against this bug.
 
-** For more information on this issue, see:
-
+** For more information on this issue, see: 
    + https://bugzilla.mozilla.org/show_bug.cgi?id=187435
-   + SourceForge bug #1723530
+   + YUILibrary bug #1723530
 
 */
 
@@ -250,6 +232,9 @@ PLEASE NOTE:
     background:url(close12_1.gif) no-repeat;
     cursor:pointer;
     visibility:inherit;
+    text-indent:-10000em;
+    overflow:hidden;
+    text-decoration:none;
 }
 
 .yui-panel .ft {
@@ -332,4 +317,8 @@ PLEASE NOTE:
     background-color:#BBB;
     border-top-color:#333;
     border-left-color:#333;
+}
+
+.yui-override-padding {
+    padding:0 !important;
 }
