--- a/war-core/src/main/webapp/util/yui/menu/assets/menu-core.css
+++ b/war-core/src/main/webapp/util/yui/menu/assets/menu-core.css
@@ -1,31 +1,20 @@
-/**
- * Copyright (C) 2000 - 2009 Silverpeas
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * As a special exception to the terms and conditions of version 3.0 of
- * the GPL, you may redistribute this Program in connection with Free/Libre
- * Open Source Software ("FLOSS") applications as described in Silverpeas's
- * FLOSS exception.  You should have recieved a copy of the text describing
- * the FLOSS exception, and it is also available here:
- * "http://repository.silverpeas.com/legal/licensing"
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
- */
+/*
+Copyright (c) 2009, Yahoo! Inc. All rights reserved.
+Code licensed under the BSD License:
+http://developer.yahoo.net/yui/license.txt
+version: 2.8.0r4
+*/
 /* Menu & MenuBar styles */
+
+.yuimenu {
+
+    top: -999em;
+    left: -999em;
+
+}
 
 .yuimenubar {
 
-    visibility: visible;
     position: static;
 
 }
@@ -33,10 +22,7 @@
 .yuimenu .yuimenu,
 .yuimenubar .yuimenu {
 
-    visibility: hidden;
     position: absolute;
-    top: -10000px;
-    left: -10000px;
 
 }
 
@@ -203,7 +189,7 @@ PLEASE NOTE:
 ** For more information on this issue, see:
 
    + https://bugzilla.mozilla.org/show_bug.cgi?id=187435
-   + SourceForge bug #1723530
+   + YUILibrary bug #1723530
 
 */
 
@@ -249,4 +235,8 @@ when one of its submenus is visible.
 
     overflow: auto;
 
+}
+
+.yui-overlay.yui-force-redraw {
+   margin-bottom: 1px;
 }
