--- a/war-core/src/main/webapp/util/yui/menu/assets/skins/sam/menu-skin.css
+++ b/war-core/src/main/webapp/util/yui/menu/assets/skins/sam/menu-skin.css
@@ -1,26 +1,9 @@
-/**
- * Copyright (C) 2000 - 2009 Silverpeas
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * As a special exception to the terms and conditions of version 3.0 of
- * the GPL, you may redistribute this Program in connection with Free/Libre
- * Open Source Software ("FLOSS") applications as described in Silverpeas's
- * FLOSS exception.  You should have recieved a copy of the text describing
- * the FLOSS exception, and it is also available here:
- * "http://repository.silverpeas.com/legal/licensing"
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
- */
+/*
+Copyright (c) 2009, Yahoo! Inc. All rights reserved.
+Code licensed under the BSD License:
+http://developer.yahoo.net/yui/license.txt
+version: 2.8.0r4
+*/
 /* MenuBar style rules */
 
 .yui-skin-sam .yuimenubar {
@@ -53,6 +36,12 @@
     border-width: 1px 0;
     *position: relative; /*  Necessary to get negative margins in IE. */
     margin: -1px 0;
+
+}
+
+.yui-skin-sam .yuimenubaritemlabel:visited {
+
+	color: #000;
 
 }
 
@@ -105,7 +94,8 @@
 
 /* Disabled  MenuBarItem */
 
-.yui-skin-sam .yuimenubaritemlabel-disabled {
+.yui-skin-sam .yuimenubaritemlabel-disabled,
+.yui-skin-sam .yuimenubaritemlabel-disabled:visited {
 
     cursor: default;
     color: #A6A6A6;
@@ -139,9 +129,22 @@
 
 .yui-skin-sam .yuimenu .bd {
 
+	/*
+		The following application of zoom:1 prevents first tier submenus of a MenuBar from hiding 
+		when the mouse is moving from an item in a MenuBar to a submenu in IE 7.
+	*/
+
+	*zoom: 1;
+	_zoom: normal;	/* Remove this rule for IE 6. */
     border: solid 1px #808080;
     background-color: #fff;
     
+}
+
+.yui-skin-sam .yuimenu .yuimenu .bd {
+
+	*zoom: normal;
+
 }
 
 .yui-skin-sam .yuimenu ul {
@@ -250,6 +253,12 @@
 
 }
 
+.yui-skin-sam .yuimenuitemlabel:visited {
+
+    color: #000;
+	
+}
+
 .yui-skin-sam .yuimenuitemlabel .helptext {
 
     margin-top: -1.5em;
@@ -289,7 +298,7 @@
     */
 
     opacity: .12;
-    *filter: alpha(opacity=12);  /* For IE */
+    filter: alpha(opacity=12);  /* For IE */
 
 }
 
@@ -309,7 +318,8 @@
 
 /* Disabled MenuItem */
 
-.yui-skin-sam .yuimenuitemlabel-disabled {
+.yui-skin-sam .yuimenuitemlabel-disabled,
+.yui-skin-sam .yuimenuitemlabel-disabled:visited {
 
     cursor: default;
     color: #A6A6A6;
