Updating the documentation
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@685 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/src/site/xdoc/installation.xml.vm
+++ b/src/site/xdoc/installation.xml.vm
@@ -87,13 +87,13 @@ Please find a list of the tools you will need to install Silverpeas below.<br/>
       <subsection name="Preparing Silverpeas">
         <p>We currently provide a packaged and pre-configured version that will build Silverpeas and its database. Please download it from </p>
           <ul>
-          <li><a href="http://repository.silverpeas.org/files/silverpeas-1.0-SNAPSHOT.zip"><img src="images/windows_logo_24X24.png"/> here for Windows</a></li>
-          <li><a href="http://repository.silverpeas.org/files/silverpeas-1.0-SNAPSHOT.tar.gz"><img src="images/linux_logo_24X24.png"/> here for Linux</a></li>
+          <li><a href="http://repository.silverpeas.org/files/silverpeas-${installer_version}.zip"><img src="images/windows_logo_24X24.png"/> here for Windows</a></li>
+          <li><a href="http://repository.silverpeas.org/files/silverpeas-${installer_version}.tar.gz"><img src="images/linux_logo_24X24.png"/> here for Linux</a></li>
         </ul>
         <p>1. Unzip/decompress the contents into a <code>silverpeas</code> directory,</p>
         <p>2. Define an environment variable <code>%SILVERPEAS_HOME%</code> that points to this directory.</p>
         <p>For example:<br/>
-        Unzip the <b>silverpeas-1.0-SNAPSHOT.zip</b> file into <i>C:\Java\silverpeas</i>.<br/>
+        Unzip the <b>silverpeas-${installer_version}.zip</b> file into <i>C:\Java\silverpeas</i>.<br/>
         The <code>%SILVERPEAS_HOME%</code> should be located at  <i>C:\Java\silverpeas</i>.
         </p>
         <p>3. Next, configure your installation by editing the files:<br/>
