fixes bug #190 (add font-size and font-family to body element)
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@727 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -31,11 +31,13 @@ BODY {
 	scrollbar-darkshadow-color: #949FB2;
 	scrollbar-track-color: #EDEDED;
 	scrollbar-arrow-color: #AFB8C9;
+	font-family: "Verdana", "Arial", sans-serif;
+	font-size: 10px;
 	margin: 0px;
 }
 
 IMG {
-	border: 0
+	border: 0px;
 }
 
 TD,div {
