closing feature #6 (adding javascript functions to BrowseBarComplete)
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@921 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2166,10 +2166,10 @@ td.browsebar a:hover {
 
 #browseBar #breadCrumb {
 	float:left;
+	font-weight: bold;
 }
 
-#browseBar #breadCrumb {
-	float:left;
+#browseBar #breadCrumb .connector {
 	font-weight: bold;
 }
 
@@ -2182,5 +2182,9 @@ td.browsebar a:hover {
 #browseBar #breadCrumb a:link,
 #browseBar #breadCrumb a:hover
 {
+  font-size :  11px;
+}
+
+#browseBar .information {
   font-size :  11px;
 }
