small ergonomics improvement (css) related to feature #187
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@939 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -1115,6 +1115,14 @@ td.browsebar a:hover {
 	margin-left: 10px;
 }
 
+#spacePerso #addComponent {
+	margin-top: 10px;
+}
+
+#spacePerso #addComponent #availables {
+	font-weight: normal;
+}
+
 #loginBox {
 	padding-top: 10px;
 	width: 100%;
