small look and feel improvement (hiding tabs underline) related to feature #197
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@941 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -990,7 +990,8 @@ td.browsebar a:hover {
 	border-color: #C9C9C9;
 	border-bottom-width: none;
 	z-index:0;
-	width:100%;
+	.width:100%;
+	_width:100%;
 }
 
 .tabSpace {
@@ -1029,6 +1030,9 @@ td.browsebar a:hover {
   visibility:visible;
 }
 
+#domainsBar .sousOnglets {
+	display: none;
+}
 
 #spaceTransverse {
 	/*background-image: url(/silverpeas/admin/jsp/icons/silverpeasV5/fondSpace.jpg);
