Fixing bug #327. Adding padding-bottom to portlet columns.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1225 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -1835,11 +1835,13 @@ td.browsebar a:hover {
 #portletPages #thick {
 	float: left;
 	width: 49%;
+	padding-bottom: 100px;
 }
 
 #portletPages #thin {
 	float: right;
 	width: 49%;
+	padding-bottom: 100px;
 }
 
 /*- [ portlet ] --------------------------- */
