Related to feature #310, adding a CSS style to positioning the link "All classifieds of category..."
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1284 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2148,6 +2148,11 @@ td.browsebar a:hover {
 	position: relative;
 }
 
+#classifieds #categories #ViewAllClassifiedsByCategory {
+	float: left;
+	padding: 5px;
+}
+
 #classifieds #categories #newClassified {
 	float: right;
 	padding: 5px;
