--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2232,3 +2232,102 @@ td.browsebar a:hover {
 	font-weight: bold;
 	color: #000000
 }
+
+/* Class for search group facet */
+.lineResult td {
+	padding-left: 5px;
+	padding-top: 5px;
+}
+
+
+#globalResultFrame {
+	width:80%;
+	float:left;
+}
+
+#globalResultGroupDivId {
+	margin:0;
+	font-size:12px;
+	position:absolute;
+	right:20px;
+	top:80px;
+	width:15%;
+}
+
+#facetSearchDivId {
+	position:relative;
+	float:right;
+	border:1pt;
+	border-style: solid;
+	width:100%;
+	height:auto;
+}
+
+#searchGroupTitle {
+	font-weight: bold;
+	padding-left: 1em;
+	height:16px;
+	line-height:16px;
+	white-space: nowrap;
+}
+
+#searchGroupTitle span.author {
+	background:url("/silverpeas/util/icons/user-icon_16px.gif") no-repeat scroll left top transparent;
+	color:#707070;
+	display:block;
+	font-weight:bold;
+	height:16px;
+	line-height:16px;
+	padding-left:20px;
+	white-space:nowrap;
+}
+
+#searchGroupTitle span.file {
+	background:url("/silverpeas/util/icons/file-icon.gif") no-repeat scroll left top transparent;
+	color:#707070;
+	display:block;
+	font-weight:bold;
+	height:16px;
+	line-height:16px;
+	padding-left:20px;
+	white-space:nowrap;
+}
+
+#searchGroupTitle span.component {
+	background:url("/silverpeas/util/icons/component/vsicPuzzleSmall.gif") no-repeat scroll left top transparent;
+	color:#707070;
+	display:block;
+	font-weight:bold;
+	height:16px;
+	line-height:16px;
+	padding-left:20px;
+	white-space:nowrap;
+}
+
+
+#searchGroupValues {
+	padding-left: 2em;
+}
+
+#searchGroupValues ul {
+	padding-left: 10px;
+	margin:0;
+}
+
+#searchGroupValues ul li {
+	list-style: none outside none;
+	padding:2px;
+}
+
+#searchGroupValues ul li.selected {
+	background-color: #7fd0ff; /* #399bff, */
+	color:white;
+}
+
+#searchGroupValues ul li.selected a {
+	color:white;
+}
+
+#searchGroupValues ul li.selected a:hover {
+	text-decoration: line-through;
+}
