Google Adwords code
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1598 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/src/site/xdoc/installation.xml.vm
+++ b/src/site/xdoc/installation.xml.vm
@@ -133,6 +133,24 @@ Please find a list of the tools you will need to install Silverpeas below.<br/>
         <p>
           You can now access Silverpeas through the following url: <a href="http://localhost:8000/silverpeas">http://localhost:8000/silverpeas</a>
           and using the account: <strong>SilverAdmin/SilverAdmin</strong>.
+          <!-- Google Code for SuiviSilverpeas Conversion Page -->
+          <script type="text/javascript">
+            /* <![CDATA[ */
+              var google_conversion_id = 1067623059;
+              var google_conversion_language = "en";
+              var google_conversion_format = "3";
+              var google_conversion_color = "ffffff";
+              var google_conversion_label = "wINQCMmd4AEQk8WK_QM";
+              var google_conversion_value = 0;
+              /* ]]> */
+          </script>
+          <script type="text/javascript" src="http://www.googleadservices.com/pagead/conversion.js">
+          </script>
+          <noscript>
+            <div style="display:inline;">
+            <img height="1" width="1" style="border-style:none;" alt="" src="http://www.googleadservices.com/pagead/conversion/1067623059/?label=wINQCMmd4AEQk8WK_QM&amp;guid=ON&amp;script=0"/>
+            </div>
+          </noscript>
         </p>
       </subsection>
     </section>
