closes feature #424 : add values for draft mode (blog)
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1659 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2065,6 +2065,19 @@ td.browsebar a:hover {
 	color: #999999;
 }
 
+#blog .titreTicketDraft {
+	width: 550px;
+	font-size: 16px;
+	font-weight: bold;
+	color: red;
+}
+
+#blog .infoTicketDraft {
+	font-size: 12px;
+	font-weight: bold;
+	color: red;
+}
+
 #blog #titreArchive {
 	font-size: 16px;
 	font-weight: bolder;
