Improving attachments CSS styles.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1722 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2235,3 +2235,15 @@ td.browsebar a:hover {
 #searchGroupValues ul li.selected a:hover {
 	text-decoration: line-through;
 }
+
+.attachments {
+	width: 150px;
+}
+
+.attachments .header {
+	text-align: center;
+}
+
+.attachments .dragNdrop {
+	text-align: right;
+}
