closing feature #435. Adding link to reset password when anonymous access is activated.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1761 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -1224,6 +1224,11 @@ td.browsebar a:hover {
 	color: #000000;
 }
 
+#domainsBar #loginBox .forgottenPwd a {
+	font-size: 10px;
+	color: #666666;
+}
+
 /****************************************/
 	/****** Look V5 - ViewGenerator *********/
 	/****************************************/ /* objet window */
