--- a/src/site/xdoc/installation.xml.vm
+++ b/src/site/xdoc/installation.xml.vm
@@ -108,11 +108,19 @@ Please find a list of the tools you will need to install Silverpeas below.<br/>
         Unzip the <b>silverpeas-${installer_stable_version}.zip</b> file into <i>C:\Java</i>.<br/>
         The <code>%SILVERPEAS_HOME%</code> should be located at  <i>C:\Java\silverpeas-${installer_stable_version}</i>.
         </p>
-        <p>3. Next, configure your installation by editing the files:<br/>
-        <ul>
-          <li>%SILVERPEAS_HOME%\setup\settings\JBossSettings.xml</li>
-          <li>%SILVERPEAS_HOME%\setup\settings\SilverpeasSettings.xml</li>
-        </ul></p>
+       
+      </subsection>
+      <subsection name="Configuration">
+        <p>Silverpeas configuration is defined in the directory <code>%SILVERPEAS_HOME%\setup\settings\</code>.
+        There you should find three files :
+          <ul>
+            <li><b>config.xml: </b>where you can configure the database connection and other Silverpeas parameters.</li>
+            <li><b>JBossSettings.xml: </b>this is where JBoss is configured, you may configure the JVM parameters for the application.</li>
+            <li><b>SilverpeasSettings.xml: </b>this is a default configuration for Silverpeas. If you want your own specific configuration,
+you can copy and paste this file to <i>CustomerSettings.xml</i> where you can define your own configuration. Creating the
+ <i>CustomerSettings.xml</i> file will avoid editing the configuration files for each upgrade of Silverpeas.</li>
+          </ul>
+        </p>
       </subsection>
       <subsection name="Deploying Silverpeas">
         <p>This is a 4 steps operation which are to be executed inside the directory <code>%SILVERPEAS_HOME%\bin</code>:</p>
@@ -129,7 +137,7 @@ Please find a list of the tools you will need to install Silverpeas below.<br/>
         </p>
         <p>In %SILVERPEAS_HOME%\bin you can stop Silverpeas with
           <b>silverpeas_stop_jboss.cmd</b>.
-        </p>
+        </p>      
         <p>
           You can now access Silverpeas through the following url: <a href="http://localhost:8000/silverpeas">http://localhost:8000/silverpeas</a>
           and using the account: <strong>SilverAdmin/SilverAdmin</strong>.
@@ -151,7 +159,7 @@ Please find a list of the tools you will need to install Silverpeas below.<br/>
             <img height="1" width="1" style="border-style:none;" alt="" src="http://www.googleadservices.com/pagead/conversion/1067623059/?label=wINQCMmd4AEQk8WK_QM&amp;guid=ON&amp;script=0"/>
             </div>
           </noscript>
-        </p>
+        </p> 
       </subsection>
     </section>
   </body>
