closing support #901. Creating new jquery widget to display homogeneous in-progress message. Updating files which using former in-progress message.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2087 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2330,3 +2330,17 @@ td.browsebar a:hover {
 .attachments .dragNdrop {
 	text-align: right;
 }
+
+#gef-progressMessage {
+	text-align: center;
+}
+
+#gef-progressMessage img {
+	margin-top: 15px;
+}
+
+#gef-progress-message1,
+#gef-progress-message1 {
+	margin-top: 15px;
+	font-weight: bold;
+}
