closing support #901. Adding missing file...
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2088 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2333,14 +2333,25 @@ td.browsebar a:hover {
 
 #gef-progressMessage {
 	text-align: center;
+	/*min-height: 70px;*/
+	background-color: #FFFFFF;
 }
 
 #gef-progressMessage img {
-	margin-top: 15px;
+	margin-top: 25px;
 }
 
-#gef-progress-message1,
 #gef-progress-message1 {
+	display: none;
+}
+
+#gef-progress-message2 {
 	margin-top: 15px;
-	font-weight: bold;
+	font-color: gray;
+}
+
+.ui-widget-header {
+	background: none;
+	background-color:#9BD94A;
+	border:1px solid #9BD94A;
 }
