--- a/war-core/src/main/webapp/socialNetwork/jsp/myProfil/myProfil.css
+++ b/war-core/src/main/webapp/socialNetwork/jsp/myProfil/myProfil.css
@@ -53,12 +53,12 @@
   width: 100%;
 }
 
-#headAndCore #profilCore #informations #form {
+#headAndCore #profilCore #informations .form {
   width: 100%;
   height: 25px;
 }
 
-#headAndCore #profilCore #informations #form .attribut {
+#headAndCore #profilCore #informations .form .attribut {
   float: left;
   width: 25%;
   font-weight: bold;
@@ -249,40 +249,3 @@ table.PHOTO td img {
   float: left;
   margin: 10px;
 }
-
-#headAndCore #profilCore #getNext {
-  float: left;
-  width: 100%;
-  margin: 2px;
-  padding: 2px;
-}
-
-#headAndCore #profilCore #SocialInformations {
-  float: left;
-  width: 100%;
-  margin: 2px;
-  padding: 2px;
-}
-
-#headAndCore #profilCore #SocialInformations .socialIcon {
-  width: 15px;
-}
-
-#headAndCore #profilCore #SocialInformations .socialTitle a {
-  color: blue;
-}
-
-#headAndCore #profilCore #SocialInformations .socialTitle {
-  font-weight: bold;
-}
-
-#headAndCore #profilCore #SocialInformations .socialTable td {
-  padding: 4px;
-}
-
-#headAndCore #profilCore #SocialInformations .socialTable img {
-  width: 15px;
-  height: 15px;
-}
-
-
