--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2355,3 +2355,10 @@ td.browsebar a:hover {
 	cursor: pointer;
 	vertical-align: bottom;
 }
+
+caption {
+	font-size: 11px;
+	font-weight: bold;
+	text-align: left;
+	padding: 5px;
+}
