fixing bug #990 width problem of current scope div (agenda)
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2257 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -320,7 +320,7 @@ Definition des class de style Silverpeas
 }
 
 #agenda #currentScope {
-	width: 200px;
+	display: inline;
 	text-align: center;
 }
 
