--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2270,3 +2270,209 @@ caption {
 	text-align: left;
 	padding: 5px;
 }
+
+/*- [ directory BEGIN ] --------------------------- */
+#directory .message_list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+#directory .message_list li {
+  padding: 0px;
+  margin: 3px;
+}
+
+#directory #recherche {
+  background-image:
+    url(<c:url value="/admin/jsp/icons/silverpeasV5/recherche.jpg"/>);
+  background-repeat: no-repeat;
+}
+
+#directory .mail {
+  text-decoration: underline;
+  color: blue;
+}
+
+#directory .link {
+  color: blue;
+}
+
+#directory .NameLink {
+  font-size: 14px;
+  color: blue;
+}
+
+#directory #index {
+
+  float:none;
+  margin:0 auto;
+  padding:4px;
+  text-align:center;
+  width:370px;
+}
+
+#directory #index a {
+  font-size: 12px;
+  text-decoration: none;
+}
+
+#directory #index a.active {
+  font-weight: bolder;
+  text-decoration: underline;
+}
+
+#directory #search {
+  float:left;
+  margin:5px 10px 10px auto;
+  padding:5px;
+  text-align:left;
+  width:230px;
+}
+
+#directory #indexAndSearch{
+  float: left;
+  width: 98%;
+}
+#directory #users {
+  float: left;
+  width: 98%;
+}
+
+#directory .avatar {
+  width: 60px;
+  height: 70px;
+  border: 0px;
+  margin: 5px;
+
+}
+
+#directory #users #infoAndPhoto #profilPhoto {
+  float:left;
+  width:80px;
+}
+
+#directory #users #infoAndPhoto #info {
+  float: left;
+  margin-top:   5px;
+}
+
+#directory #users #infoAndPhoto {
+  float:left;
+  width:65%;
+}
+
+#directory #users #action {
+  text-align: right;
+  float:right;
+  width:28%;
+  padding-top: 2%;
+}
+
+#directory #users #pagination {
+  text-align: center;
+}
+
+#directory #info ul {
+  margin: 0;
+  padding: 0;
+}
+
+#directory #info ul li {
+  display:list-item;
+  list-style-type:none;
+}
+
+#directory #users a{
+  color:blue;
+  font-size:10px;
+  font-weight:normal;
+}
+#directory #info ul li .userName{
+  color:blue;
+  font-size:14px;
+  font-weight:bold;
+}
+/*- [ directory END ] --------------------------- */
+/*- [ invitations BEGIN ] --------------------------- */
+#invitation #navigation {
+  float: left;
+  width: 20%;
+  margin: 2px;
+  padding: 2px;
+}
+    
+#invitation #content {
+  float: left;
+  width: 75%;
+  margin: 2px;
+  padding: 2px;
+}
+
+#invitation #navigation #myInfo{
+  float: right;
+}
+
+#invitation #navigation .box {
+	background-color:#FFFFFF;
+    background-image:url(/silverpeas/admin/jsp/icons/silverpeasV5/fondBoard.jpg);
+    background-position:right top;
+    background-repeat:no-repeat;
+    margin-left:auto;
+    margin-right:auto;
+    margin-bottom: 15px;
+}
+
+#invitation #navigation .box img {
+	width: 70px;
+   	height: 80px;
+}
+
+#invitation #navigation ul {
+   margin: 0;
+   padding: 0;
+}
+
+#invitation #navigation li{
+	display:list-item;
+    list-style-type:none;
+    padding: 5px;
+}
+
+#invitation #navigation li A:hover {
+    font-weight: bold;
+}
+
+#invitation #listBody {
+	list-style:none outside none;
+	padding-left:0;
+}
+
+#invitation #listBody #photo{
+    float :left;
+    margin-right:4px;
+}
+
+#invitation #listBody #information a{
+    color: blue;
+    font-size: 12px;
+    font-weight: bold;
+    margin-bottom: 3px;
+}
+
+#invitation #listBody #information {
+    vertical-align: top;
+    float :left;
+}
+
+#invitation #listBody #button {
+    float:right;
+    margin-top:10px;
+}
+
+#invitation #listBody #button #message{
+    /*width: 40%;*/
+    text-align: right;
+}
+/*- [ invitations END ] --------------------------- */
